--- a/estilo.css
+++ b/estilo.css
@@ -233,6 +233,7 @@
             line-height: 25px;
             color: #565656;
             margin-bottom: 12px;
+            text-align: justify;
         }
         
         #sobremi .sobremi a {
